updated config.json for heroku deployment

--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "s7plqjmfpc8l14ya",
+    "password": "x0e1vywktekzzbpa",
+    "database": "zeycq32nnwu7hjth",
+    "host": "t89yihg12rw77y6f.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
